package logic.game;

public enum TeamColor {
    WHITE,
    BLACK;

    @Override
    public String toString() {
        return super.toString();
    }
}
